# Aethermark

./: .appveyor.yml  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: conda.yml  pip.yml  publish.yml  test.yml
conda.recipe/: meta.yaml
src/: Node.cpp  Node.hpp  NodeWalker.cpp  NodeWalker.hpp  binding.cpp
tests/: test_basic.py  test_node.py  test_node_walker.py
